--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "type-check": "vue-tsc --noEmit -p tsconfig.app.json --composite false"
   },
   "dependencies": {
+    "chart.js": "^4.4.0",
     "dayjs": "^1.11.9",
+    "firebase": "^10.2.0",
     "pinia": "^2.1.4",
     "vue": "^3.3.4"
   },
