--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "dayjs": "^1.11.9",
     "firebase": "^10.2.0",
     "pinia": "^2.1.4",
-    "vue": "^3.3.4"
+    "vue": "^3.3.4",
+    "vue3-lazyload": "^0.3.8"
   },
   "devDependencies": {
     "@tsconfig/node18": "^18.2.0",
