--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "type-check": "vue-tsc --noEmit -p tsconfig.app.json --composite false"
   },
   "dependencies": {
+    "aos": "^3.0.0-beta.6",
     "chart.js": "^4.4.0",
     "dayjs": "^1.11.9",
     "firebase": "^10.2.0",
