--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "postcss": "^8.4.27",
     "sass": "^1.65.1",
     "tailwindcss": "^3.3.3",
+    "terser": "^5.19.3",
     "typescript": "~5.1.6",
     "vite": "^4.4.6",
     "vue-tsc": "^1.8.6"
