--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "firebase": "^10.2.0",
     "pinia": "^2.1.4",
     "vue": "^3.3.4",
-    "vue3-lazyload": "^0.3.8"
+    "vue3-lazyload": "^0.3.8",
+    "vue3-lottie": "^3.1.0"
   },
   "devDependencies": {
     "@tsconfig/node18": "^18.2.0",
