--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -5,7 +5,8 @@
     "src/**/*",
     "src/**/*.vue",
     "src/**/**/*.vue",
-    "src/**/*.ts"
+    "src/**/*.ts",
+    "src/**/*.json"
   ],
   "exclude": ["src/**/__tests__/*"],
   "compilerOptions": {
